# jun.codes

./: .gitignore  README.md  biome.json  package.json  pnpm-lock.yaml  tailwind.config.ts
.github/workflows/: azure-webapps-node.yml
infra/: .terraform.lock.hcl  route53.tf  terraform.tf  vercel.tf  watchtower.tf
public/: robots.txt  site.webmanifest
src/: classname.ts  internationalization.ts
src/app/: globals.css  layout.tsx  manifest.ts  page.tsx  sitemap.ts
src/app/(metadata)/rss.xml/: route.ts
src/app/blog/[slug]/: page.tsx
src/app/rss.xml/: route.ts
src/app/work/: page.tsx
src/components/: badge.tsx  grid.tsx  heading.tsx  navbar.tsx  section.tsx  text.tsx  title.tsx
src/content/: authorization-with-cedar.md  kickstarting-rust-on-aws-lambda.md  parc-authorization-with-cedar.md
src/content/authorization-with-cedar/cedar-example/src/: policy.cedar  policy.cedarschema
src/content/blog/: authorization-with-cedar.md  bootstrapping-terraform-configuration.md  kickstarting-rust-on-aws-lambda.md
src/content/blog/authorization-with-cedar/cedar-example/: Cargo.toml
src/content/jobs/: capra-consulting.md  consigli.md  kodeworks.md  larsen-digital.md  nho-elektro.md
src/content/kickstarting-rust-on-aws-lambda/with-axum/: Cargo.toml  main.tf  terraform.tf
src/content/kickstarting-rust-on-aws-lambda/with-axum/src/: main.rs
src/content/kickstarting-rust-on-aws-lambda/with-service-fn/: Cargo.toml  main.tf
src/content/kickstarting-rust-on-aws-lambda/with-service-fn/src/: main.rs
src/server/: blog.ts  collection.ts  environment.ts  job.ts
(+5 files in other folders)
