[package]
name = "with-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["json", "tracing", "query"] }
lambda_http = { version = "0.11.1", features = ["tracing"] }
lambda_runtime = { version = "0.11.2", features = ["tracing"] }
serde = "1.0.203"
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
