[package]
name = "with-service-fn"
version = "0.1.0"
edition = "2021"

[dependencies]
aws_lambda_events = "0.15.1"
lambda_runtime = { version = "0.11.2", features = ["tracing"] }
serde = "1.0.203"
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter", "json"] }
